--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ffaiz00-atm-machine",
+  "name": "ffaiz-atm-machine",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
